[package]
name = "dotenv-tool"
version = "0.1.0"
edition = "2021"
authors = ["Mathew Norman <contact@mat.codes>"]
license = "MIT"
description = "A tool for viewing and manipulating .env files."
readme = "README.md"
homepage = "https://github.com/themathewnorman/dotenv-tool"
repository = "https://github.com/themathewnorman/dotenv-tool"
keywords = ["cli", "env", "dotenv", "file-tools", "config-tools"]
categories = ["command-line-utilities"]
